--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^4.9.0
   firebase: ^9.0.3
   firebase_core: ^2.15.1
+  cloud_firestore: ^4.9.1
 
 dev_dependencies:
   flutter_test:
