--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase: ^9.0.3
   firebase_core: ^2.15.1
   cloud_firestore: ^4.9.1
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_test:
