--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,12 @@ dependencies:
   glassmorphism_ui: ^0.3.0
   cloud_firestore: ^4.9.1
   google_sign_in: ^6.1.5
-
+  google_mlkit_translation: ^0.8.0
+  google_mlkit_object_detection: ^0.10.0
+  path_provider: ^2.1.1
+  image_picker: ^1.0.4
+  file_picker: ^5.5.0
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +68,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/ml/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
